--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script type="text/javascript" src="js/jquery-ui.min.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 	
-		<title>GDES 4131: Art Deco & Art Nouveau Images</title>
+		<title>GDES 4131: Art Nouveau & Art Deco Images</title>
 	
 	</head>
 
@@ -21,7 +21,7 @@
 		<div class="container"> <!-- container for the entire page -->
 
 			<p class="title"> <!-- Title of web page -->
-				Art Deco &<br> Art Nouveau <br>Images
+				Art Nouveau &<br> Art Deco <br>Images
 			</p>
 
 			<div class="drag_container">
