--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8">
 
 		<!-- CSS Files -->
-		<link rel="stylesheet" href="css/reset.css" />
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/reset.css?v=1" />
+		<link rel="stylesheet" href="css/style.css?v=1" />
 
 		<!-- All Javascript/jQuery Files -->
 		<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
